# mps-pre-commit-hooks

./: .editorconfig  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.json5  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/mps/: model-ids-and-references.md  model-roots-and-source-roots.html  model-roots-and-source-roots.md
src/mps_pre_commit_hooks/: __init__.py  _common.py  check_banned_model_names.py  check_language_versions.py  check_missing_modules.py  check_model_names.py  check_model_naming.py  check_module_naming.py  check_orphan_models.py  check_orphan_modules.py  check_orphan_mpsr_files.py  check_path_variables.py  check_test_info.py  check_unbuilt_modules.py  check_zero_sized_xmls.py
tests/: support.py  test_check_banned_model_names.py  test_check_language_versions.py  test_check_missing_modules.py  test_check_model_names.py  test_check_model_naming.py  test_check_module_naming.py  test_check_orphan_models.py  test_check_orphan_modules.py  test_check_orphan_mpsr_files.py  test_check_path_variables.py  test_check_test_info.py  test_check_unbuilt_modules.py  test_check_zero_sized_xmls.py  test_common.py
